name:                geo-nl
version:             0.1.0.0
synopsis:            Conversion program for RD coordinates
description:         Please see README.md
homepage:            https://github.com/mrvdb/geo-nl#readme
license:             BSD3
license-file:        LICENSE
author:              Marcel van der Boom
maintainer:          marcel@hsdev.com
copyright:           2016 Marcel van der Boom
category:            CLI
build-type:          Simple
cabal-version:       >=1.10

executable geo-nl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
